--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,6 @@ website/pages/tutorials/*
 # Configs for local development
 configs/config/config_local/*
 train_config.yaml
+
+#compvits ignore
+logs
