--- a/configs/config/compvits/ibot_eval.yaml
+++ b/configs/config/compvits/ibot_eval.yaml
@@ -8,22 +8,13 @@ config:
       meter_names: ["1", "2", "3", "4"]
   HOOKS:
     TENSORBOARD_SETUP:
-      # whether to use tensorboard for the visualization
       USE_TENSORBOARD: True
-      # log directory for tensorboard events
-      LOG_DIR: "logs"
-      EXPERIMENT_LOG_DIR: "tensorboard"
-      # flush logs every n minutes
       FLUSH_EVERY_N_MIN: 5
-      # whether to log the model parameters to tensorboard
       LOG_PARAMS: False
-      # whether to log the model parameters gradients to tensorboard
       LOG_PARAMS_GRADIENTS: False
-      # if we want to log the model parameters every few iterations, set the iteration
-      # frequency. -1 means the params will be logged only at the end of epochs.
       LOG_PARAMS_EVERY_N_ITERS: -1
   CHECKPOINT:
-    DIR: "checkpoints/eval"
+    DIR: "logs/eval"
   DISTRIBUTED:
     NUM_PROC_PER_NODE: 1
   DATA:
@@ -81,6 +72,6 @@ config:
       ]
     WEIGHTS_INIT:
       # Use the teacher to perform the evaluation
-      PARAMS_FILE: /home/jan.olszewski/git/vissl/checkpoints/linear/model_final_checkpoint_phase99.torch
+      PARAMS_FILE: /home/jan.olszewski/git/vissl_original/checkpoints/linear/model_final_checkpoint_phase99.torch
   LOSS:
     name: cross_entropy_multiple_output_single_target
