--- a/configs/config/compvits/ibot_eval.yaml
+++ b/configs/config/compvits/ibot_eval.yaml
@@ -25,7 +25,7 @@ config:
       LABEL_SOURCES: [disk_folder]
       DATASET_NAMES: [imagenet1k_folder]
       DATA_PATHS: [/home/jan.olszewski/datasets/tiny-imagenet-200/val]
-      BATCHSIZE_PER_REPLICA: 512
+      BATCHSIZE_PER_REPLICA: 32
       TRANSFORMS:
         - name: Resize
           size: 256
@@ -36,6 +36,9 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
+        - name: CompositionalMasks
+          mask_areas: [0.2, 0.2]
+          masking_mode: "glued_sides"
   MODEL:
     FEATURE_EVAL_SETTINGS:
       EVAL_MODE_ON: True
