--- a/configs/config/compvits/ibot_linear_eval.yaml
+++ b/configs/config/compvits/ibot_linear_eval.yaml
@@ -5,16 +5,9 @@ config:
     name: accuracy_list_meter
     accuracy_list_meter:
       topk_values: [1, 5]
-      meter_names: ["1", "2", "3", "4"]
-  HOOKS:
-    TENSORBOARD_SETUP:
-      USE_TENSORBOARD: True
-      FLUSH_EVERY_N_MIN: 5
-      LOG_PARAMS: False
-      LOG_PARAMS_GRADIENTS: False
-      LOG_PARAMS_EVERY_N_ITERS: -1
+      meter_names: ["cls4evalmlp", "cls1evalmlp", "cls4mlp", "cls1mlp"]
   CHECKPOINT:
-    DIR: "logs/eval"
+    DIR: None #"logs/eval"
   DISTRIBUTED:
     NUM_PROC_PER_NODE: 1
   DATA:
@@ -36,13 +29,13 @@ config:
         - name: Normalize
           mean: [0.485, 0.456, 0.406]
           std: [0.229, 0.224, 0.225]
-        - name: CompositionalMasks
-          mask_areas: [0.2, 0.2]
-          masking_mode: "glued_sides"
+        - name: CompMasking
+          masks_shapes: [[[7,7]], [[7,7]]]
+          padding: [0, 0]
+          masking_mode: "primary_secondary"
   MODEL:
     FEATURE_EVAL_SETTINGS:
       EVAL_MODE_ON: True
-      #FREEZE_TRUNK_ONLY: True
       FREEZE_TRUNK_AND_HEAD: True
       EVAL_TRUNK_AND_HEAD: True
       SHOULD_FLATTEN_FEATS: False
@@ -55,9 +48,9 @@ config:
     TRUNK: # S-16
       NAME: vision_transformer
       VISION_TRANSFORMERS:
-        REPR_COMPOSITION:
+        COMPVITS:
           NAME: 'afterK'
-          PARAMS: {"dummy": 1}
+          PARAMS: {"K": None}
         IMAGE_SIZE: 224
         PATCH_SIZE: 16
         HIDDEN_DIM: 384
@@ -68,7 +61,7 @@ config:
         DROPOUT_RATE: 0
         ATTENTION_DROPOUT_RATE: 0
         QKV_BIAS: True
-        DROP_PATH_RATE: 0.1 # stochastic depth dropout probability
+        DROP_PATH_RATE: 0.1
     HEAD:
       PARAMS: [
         ["eval_mlp", {"in_channels": 1536, "dims": [1536, 200]}],
@@ -77,7 +70,6 @@ config:
         ["mlp", {"dims": [384, 200]}],
       ]
     WEIGHTS_INIT:
-      # Use the teacher to perform the evaluation
-      PARAMS_FILE: /home/jan.olszewski/git/vissl_original/checkpoints/linear/model_final_checkpoint_phase99.torch
+      PARAMS_FILE: None #/home/jan.olszewski/git/vissl_original/checkpoints/linear/model_final_checkpoint_phase99.torch
   LOSS:
     name: cross_entropy_multiple_output_single_target
