--- a/configs/config/compvits/task/knn.yaml
+++ b/configs/config/compvits/task/knn.yaml
@@ -1,5 +1,7 @@
 # @package _global_
 config:
+  DISTRIBUTED:
+    NUM_PROC_PER_NODE: 1
   METERS:
     name: accuracy_list_meter
     accuracy_list_meter:
