--- a/configs/config/compvits/task/test_linear.yaml
+++ b/configs/config/compvits/task/test_linear.yaml
@@ -1,5 +1,8 @@
 # @package _global_
 config:
+  DISTRIBUTED:
+    NUM_PROC_PER_NODE: 1
+  TEST_ONLY: True
   METERS:
     name: accuracy_list_meter
     accuracy_list_meter:
@@ -7,8 +10,10 @@ config:
       meter_names: ["cls4_evalmlp", "cls1_evalmlp", "cls4_mlp", "cls1_mlp"]
   MODEL:
     FEATURE_EVAL_SETTINGS:
+      EXTRACT_TRUNK_FEATURES_ONLY: False
       EVAL_MODE_ON: True
-      FREEZE_TRUNK_ONLY: True
+      FREEZE_TRUNK_AND_HEAD: True
+      EVAL_TRUNK_AND_HEAD: True
       SHOULD_FLATTEN_FEATS: False
       LINEAR_EVAL_FEAT_POOL_OPS_MAP: [
         ["concatCLS4", ["Identity", []] ],
@@ -25,21 +30,3 @@ config:
       ]
   LOSS:
     name: cross_entropy_multiple_output_single_target
-  OPTIMIZER:
-    name: sgd
-    weight_decay: 0.0005
-    momentum: 0.9
-    num_epochs: 100
-    nesterov: True
-    regularize_bn: True
-    regularize_bias: True
-    param_schedulers:
-      lr:
-        auto_lr_scaling:
-          auto_scale: true
-          base_value: 0.01
-          base_lr_batch_size: 256
-        name: multistep
-        values: [0.01, 0.001, 0.0001, 0.00001]
-        milestones: [28, 56, 84]
-        update_interval: epoch
