--- a/configs/config/compvits/model/trunk/vitb.yaml
+++ b/configs/config/compvits/model/trunk/vitb.yaml
@@ -11,21 +11,27 @@ config:
       ]
     HEAD:
       PARAMS: []
-    TRUNK: # S-16
+    TRUNK:
       NAME: vision_transformer
       VISION_TRANSFORMERS:
         COMPVITS:
           # - '': Disable representation composition
           # - 'afterK': compose representations after processing K blocks
-          NAME: "afterK"
-          # Parameters provided to the Masked Generator
-          PARAMS: {"K": 0}
+          COMP:
+            NAME: ""
+            # Parameters provided to the Masked Generator
+            PARAMS: {"K": None}
+          SPLIT:
+            # - "precomputed_masks": split input into M regions based on precomputed masks
+            # - "transform_masks" split input into regions based on vissl/data/ssl_transforms/compvits.py
+            NAME: ""
+            PARAMS: {"M": None}
         IMAGE_SIZE: 224
         PATCH_SIZE: 16
-        HIDDEN_DIM: 384
+        HIDDEN_DIM: 768
         NUM_LAYERS: 12
-        NUM_HEADS: 6
-        MLP_DIM: 1536
+        NUM_HEADS: 12
+        MLP_DIM: 3072
         CLASSIFIER: token
         DROPOUT_RATE: 0
         ATTENTION_DROPOUT_RATE: 0
