--- a/configs/config/compvits/task/test_linear.yaml
+++ b/configs/config/compvits/task/test_linear.yaml
@@ -1,32 +1,17 @@
 # @package _global_
 config:
-  DISTRIBUTED:
-    NUM_PROC_PER_NODE: 1
   TEST_ONLY: True
   METERS:
     name: accuracy_list_meter
     accuracy_list_meter:
       topk_values: [1, 5]
-      meter_names: ["cls4_evalmlp", "cls1_evalmlp", "cls4_mlp", "cls1_mlp"]
   MODEL:
     FEATURE_EVAL_SETTINGS:
       EXTRACT_TRUNK_FEATURES_ONLY: False
       EVAL_MODE_ON: True
       FREEZE_TRUNK_AND_HEAD: True
+      FREEZE_TRUNK_ONLY: False
       EVAL_TRUNK_AND_HEAD: True
       SHOULD_FLATTEN_FEATS: False
-      LINEAR_EVAL_FEAT_POOL_OPS_MAP: [
-        ["concatCLS4", ["Identity", []] ],
-        ["lastCLS", ["Identity", []] ],
-        ["concatCLS4", ["Identity", []] ],
-        ["lastCLS", ["Identity", []] ],
-      ]
-    HEAD:
-      PARAMS: [
-        ["eval_mlp", {"in_channels": 1536, "dims": [1536, 200]}],
-        ["eval_mlp", {"in_channels": 384, "dims": [384, 200]}],
-        ["mlp", {"dims": [1536, 200]}],
-        ["mlp", {"dims": [384, 200]}],
-      ]
   LOSS:
     name: cross_entropy_multiple_output_single_target
